lib/knob.h

/**************** Below is the interface for Julia *********************/

struct MatrixKnob;
struct FunctionKnob;
bool IsConstantStructured(MatrixKnob* mknob);
MatrixKnob* GetMatrixKnob(FunctionKnob* fknob, int i);
// C = A*D*B
// A is m*k matrix
// B is k*n matrix
// C is m*n matrix
void ADB(
    int m, int n, int k,
    int **C_colptr, int **C_rowval, double **C_nzval,
    int *A_colptr, int *A_rowval, double *A_nzval,
    int *B_colptr, int *B_rowval, double *B_nzval,
    const double *d,
    FunctionKnob *fknob);
void SpSquareWithEps(
    int m, int n,
    int **C_colptr, int **C_rowval, double **C_nzval,
    int *A_colptr, int *A_rowval, double *A_nzval,
    double eps,
    FunctionKnob *fknob);
void SpAdd(
    int m, int n,
    int **C_colptr, int **C_rowval, double **C_nzval,
    double alpha,
    int *A_colptr, int *A_rowval, double *A_nzval,
    double beta,
    int *B_colptr, int *B_rowval, double *B_nzval,
    FunctionKnob *fknob);
double Trace(int n, int *A_colptr, int *A_rowval, double *A_nzval);