lib/CSR_Interface.h

// w = alpha*x + beta*w
void waxpby(int n, double *w, double alpha, const double *x, double beta, const double *y);
// w = alpha*x + beta
void waxpb(int n, double *w, double alpha, const double *x, double beta);