src/lib-interface.jl


@doc """" Alocate space for and return element-wise multiplication of two vectors. """
function element_wise_multiply(
    x :: Vector{Float64}, 
    y :: Vector{Float64}
)
  w = Array(Cdouble, length(x))
  element_wise_multiply!(w, x, y)
  w
end

@doc """" Alocate space for and return element-wise multiplication of two vectors. """
function element_wise_multiply(
    x :: Vector{Float64}, 
    y :: Vector{Complex128}
)
  w = Array(Complex128, length(x))
  element_wise_multiply!(w, x, y)
  w
end


@doc """ w = alpha*x + beta*y """
function WAXPBY!(
    w     :: Vector, 
    alpha :: Number, 
    x     :: Vector, 
    beta  :: Number, 
    y     :: Vector
)
  assert(length(x) == length(y))
  assert(length(x) == length(w))

  if use_SPMP
    ccall((:waxpby, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Cdouble, Ptr{Cdouble}, Cdouble, Ptr{Cdouble}),
          length(x), pointer(w), alpha, pointer(x), beta, pointer(y))
    w
  else
    w[:] = alpha*x + beta*y
  end
end

@doc """ w = alpha*x + beta*y """
function WAXPBY!(
    w     :: Vector{Complex128}, 
    alpha :: Number, 
    x     :: Vector{Complex128}, 
    beta  :: Number, 
    y     :: Vector{Complex128}
)
  assert(length(x) == length(y))
  assert(length(x) == length(w))

  if use_SPMP
    ccall((:waxpby_complex, LIB_PATH), Void,
          (Cint, Ptr{Complex128}, Complex128, Ptr{Complex128}, Complex128, Ptr{Complex128}),
          length(x), pointer(w), alpha, pointer(x), beta, pointer(y))
  else
    w[:] = alpha*x + beta*y
  end
end

@doc """ w = alpha*x + beta*y """
function WAXPBY!(
    w     :: Vector{Complex128}, 
    alpha :: Number, 
    x     :: Vector{Complex128}, 
    beta  :: Number, 
    y     :: Vector{Complex128}
)
  assert(length(x) == length(y))
  assert(length(x) == length(w))

  if use_SPMP
    ccall((:waxpby_complex, LIB_PATH), Void,
          (Cint, Ptr{Complex128}, Complex128, Ptr{Complex128}, Complex128, Ptr{Complex128}),
          length(x), pointer(w), alpha, pointer(x), beta, pointer(y))
  else
    w[:] = alpha*x + beta*y
  end
end

@doc """ Allocate space for and return alpha*x + beta*y """
function WAXPBY(
    alpha :: Number,
    x     :: Vector{Float64}, 
    beta  :: Number, 
    y     :: Vector{Float64}
)
  w = Array{Cdouble}(length(x))
  WAXPBY!(w, alpha, x, beta, y)
  w
end

@doc """ Allocate space for and return alpha*x + beta*y """
function WAXPBY(
    alpha :: Number,
    x     :: Vector{Complex128}, 
    beta  :: Number, 
    y     :: Vector{Complex128}
)
  w = Array(Complex128, length(x))
  WAXPBY!(w, alpha, x, beta, y)
  w
end

@doc """ Allocate space for and return alpha*x + beta*y """
function WAXPBY(
    alpha :: Number,
    x     :: Vector{Complex128}, 
    beta  :: Number, 
    y     :: Vector{Complex128}
)
  w = Array(Complex128, length(x))
  WAXPBY!(w, alpha, x, beta, y)
  w
end

@doc """ w = alpha*x + beta """
function WAXPB!(
    w     :: Vector, 
    alpha :: Number, 
    x     :: Vector, 
    beta  :: Number
)
  assert(length(w) == length(x))

  if use_SPMP
    ccall((:waxpb, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Cdouble, Ptr{Cdouble}, Cdouble),
          length(x), pointer(w), alpha, pointer(x), beta)
    w
  else
    w[:] = alpha*x + beta
  end
end

@doc """ w = alpha*x + beta """
function WAXPB!(
    w     :: Vector{Complex128}, 
    alpha :: Number, 
    x     :: Vector{Complex128}, 
    beta  :: Number
)
  assert(length(w) == length(x))

  if use_SPMP
    ccall((:waxpb_complex, LIB_PATH), Void,
          (Cint, Ptr{Complex128}, Complex128, Ptr{Complex128}, Complex128),
          length(x), pointer(w), alpha, pointer(x), beta)
  else
    w[:] = alpha*x + beta
  end
end

@doc """ w = alpha*x + beta """
function WAXPB!(
    w     :: Vector{Complex128}, 
    alpha :: Number, 
    x     :: Vector{Complex128}, 
    beta  :: Number
)
  assert(length(w) == length(x))

  if use_SPMP
    ccall((:waxpb_complex, LIB_PATH), Void,
          (Cint, Ptr{Complex128}, Complex128, Ptr{Complex128}, Complex128),
          length(x), pointer(w), alpha, pointer(x), beta)
  else
    w[:] = alpha*x + beta
  end
end

@doc """ Allocate space for and return alpha*x + beta """
function WAXPB(
    alpha :: Number, 
    x     :: Vector, 
    beta  :: Number
)
  w = Array(Cdouble, length(x))
  WAXPB!(w, alpha, x, beta)
  w
end
 
@doc """
Compute A * D * B, where A and B have constant structures, D is a diagonal
matrix.

The A and B are inputed as AT and BT (transposed A and B) in Julia CSC format,
which become A and B in CSR.

An additional fknob is passed in, which contains a matrix knob representing the
output of this function, and 3 other matrix knobs representing the input of this
function (A, D, B).

In addition to its original semantics, which is returning A * D *B, this
function also reuses context info (from the input matrix knobs), and generates
new context info (for the output matrix knob). 

If the source statements are 
    for  
        X = A * D * B
they have been transformed into the following form before executing this function:
    C = Symbol("ouptut") # representing the ouptut of the call at this call site
    mknob_C = new_matrix_knob(properties of C)
    mknob_A = new_matrix_knob(properties of A)
    mknob_D = new_matrix_knob(properties of D)
    mknob_B = new_matrix_knob(properties of B)
    mknob_X = new_matrix_knob(properties of X)
    fknob_ADB = new_function_knob()
    add mknob_C, _A, _D, _B to fknob_ADB
    for 
        X = ADB(AT, D, BT, fknob_ADB)
        knob_X = mknob_C  #propagate mknob_C information to mknob_X.
                          #This may or may not be one to one copy. For example,
                          # if C is constant valued, but X is only constant
                          # structured, then we may not pass C's memory
                          # to X directly; instead, we might pass a copy of C's
                          # memory.

In general, in context-sensitive optimizations, there are two problems:
(1) how a function generates and reuses context info?
(2) how to propagate context info? 
Here we focus on the first problem.

ADB(A', D, B', fknob_ADB) functionality:
    if fknob_ADB == NULL
        return A * D * B
    
    get the output mknob_C, and input mknob_A, D, B from fknob_ADB
    assert(mknob_C != NULL)
    assert(mknob_A != NULL)
    assert(mknob_D != NULL)
    assert(mknob_B != NULL)
    
    # Check inputs
    assert(mknob_A->constant_structured)
    assert(mknob_D->diagonal)
    assert(mknob_B->constant_structured)
    
    # Compute output
    if mknob_C->matrix == NULL
        mknob_C->matrix = adb_inspect(A', B')
    mknob_C->matrix = CSR_ADB(mknob_C->matrix,  A', B', diag(D))

    # Return the result.
    return mknob_C->matrix in CSC format
"""
function ADB(
    A     :: SparseMatrixCSC,
    D     :: SparseMatrixCSC,
    B     :: SparseMatrixCSC,
    fknob :: Ptr{Void}
)
    if fknob == C_NULL
        # This case should never be reached. We leave it here only to show how
        # a library function can have the same interface with and without 
        # context info.
        assert(false)
        return AT' * D * BT'
    end

    mknob_C = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
    mknob_A = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 1)
    mknob_D = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 2)
    mknob_B = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 3)
    assert(mknob_C != C_NULL)
    assert(mknob_A != C_NULL)
    assert(mknob_D != C_NULL)
    assert(mknob_B != C_NULL)

    # Check inputs and output
    assert(ccall((:IsConstantStructured, LIB_PATH), Bool, (Ptr{Void},), mknob_A))
    #TODO: assert(mknob_D->diagonal)
    assert(ccall((:IsConstantStructured, LIB_PATH), Bool, (Ptr{Void},), mknob_B))

    fill_matrix_info_once(mknob_A, A)
    fill_matrix_info_once(mknob_D, D)
    fill_matrix_info_once(mknob_B, B)

    m = size(A, 1)
    n = size(B, 2)
    k = size(A, 2)

    C_colptr_ref = Ref{Ptr{Cint}}(C_NULL)
    C_rowval_ref = Ref{Ptr{Cint}}(C_NULL)
    C_nzval_ref = Ref{Ptr{Cdouble}}(C_NULL)

    ccall((:ADB, LIB_PATH), Void,
         (Cint, Cint, Cint,
           Ref{Ptr{Cint}}, Ref{Ptr{Cint}}, Ref{Ptr{Cdouble}},
           Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
           Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
           Ptr{Cdouble},
           Ptr{Void}),
         m, n, k,
         C_colptr_ref, C_rowval_ref, C_nzval_ref,
         A.colptr, A.rowval, A.nzval,
         B.colptr, B.rowval, B.nzval,
         D.nzval,
         fknob)

    C_colptr = pointer_to_array(C_colptr_ref[], n + 1)
    nnz = C_colptr[n + 1] - 1
    C_rowval = pointer_to_array(C_rowval_ref[], nnz)
    C_nzval = pointer_to_array(C_nzval_ref[], nnz)
    SparseMatrixCSC{Cdouble, Cint}(m, n, C_colptr, C_rowval, C_nzval)
end

# A*A'
function SpSquareWithEps(
    A     :: SparseMatrixCSC{Float64, Int32},
    eps   :: Number,
    fknob :: Ptr{Void} = C_NULL)

    if fknob != C_NULL
        mknob_A = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
        assert(mknob_A != C_NULL)
        fill_matrix_info_once(mknob_A, A)
    end
    
    m = size(A, 1)
    n = size(A, 2)

    C_colptr_ref = Ref{Ptr{Cint}}(C_NULL)
    C_rowval_ref = Ref{Ptr{Cint}}(C_NULL)
    C_nzval_ref = Ref{Ptr{Cdouble}}(C_NULL)

    ccall((:SpSquareWithEps, LIB_PATH), Ptr{Void},
          (Cint, Cint,
           Ref{Ptr{Cint}}, Ref{Ptr{Cint}}, Ref{Ptr{Cdouble}},
           Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
           Cdouble,
           Ptr{Void}),
          m, n,
          C_colptr_ref, C_rowval_ref, C_nzval_ref,
          A.colptr, A.rowval, A.nzval,
          eps,
          fknob)

    C_colptr = pointer_to_array(C_colptr_ref[], n + 1)
    nnz = C_colptr[n + 1] - 1
    C_rowval = pointer_to_array(C_rowval_ref[], nnz)
    C_nzval = pointer_to_array(C_nzval_ref[], nnz)
    SparseMatrixCSC{Cdouble, Cint}(m, n, C_colptr, C_rowval, C_nzval)
end

# alpha*A + beta*B
function SpAdd(
    alpha :: Number,
    A     :: SparseMatrixCSC{Float64, Int32},
    beta  :: Number,
    B     :: SparseMatrixCSC{Float64, Int32})

    m = size(A, 1)
    n = size(A, 2)
    assert(m == size(B, 1))
    assert(n == size(B, 2))

    C_colptr_ref = Ref{Ptr{Cint}}(C_NULL)
    C_rowval_ref = Ref{Ptr{Cint}}(C_NULL)
    C_nzval_ref = Ref{Ptr{Cdouble}}(C_NULL)

    ccall((:SpAdd, LIB_PATH), Ptr{Void},
          (Cint, Cint,
           Ref{Ptr{Cint}}, Ref{Ptr{Cint}}, Ref{Ptr{Cdouble}},
           Cdouble,
           Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
           Cdouble,
           Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
           Ptr{Void}),
          m, n,
          C_colptr_ref, C_rowval_ref, C_nzval_ref,
          alpha,
          A.colptr, A.rowval, A.nzval,
          beta,
          B.colptr, B.rowval, B.nzval,
          C_NULL)

    C_colptr = pointer_to_array(C_colptr_ref[], n + 1)
    nnz = C_colptr[n + 1] - 1
    C_rowval = pointer_to_array(C_rowval_ref[], nnz)
    C_nzval = pointer_to_array(C_nzval_ref[], nnz)
    SparseMatrixCSC{Cdouble, Cint}(m, n, C_colptr, C_rowval, C_nzval)
end

function trace(
    A   :: SparseMatrixCSC{Float64, Int32})

    ccall((:Trace, LIB_PATH), Cdouble,
          (Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}),
          size(A, 1), A.colptr, A.rowval, A.nzval)
end

@doc """ 
Compute the sparse Cholesky factorization of a sparse matrix A, where A is
constant in structure.

Functionality:
    if fknob == NULL
        return cholfact_int32(A)
    
    get the output/input mknob_O and A from fknob
    
    # Check input
    assert(mknob_A->constant_structured)
    if mknob_A->matrix == NULL
        return cholfact_int32(A)
